fixed stretched profile picture

--- a/web-frontend/src/app/pages/friends/friends.component.scss
+++ b/web-frontend/src/app/pages/friends/friends.component.scss
@@ -90,8 +90,10 @@
             align-items: center;
 
             .profile_picture {
+              width: 4rem;
               height: 4rem;
-              border-radius: 100rem;
+              border-radius: 50%;
+              object-fit: cover;
             }
 
             .action_button {
